--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -85,8 +85,8 @@
 
 @techreport{LopDubStu2011irace,
   author = lopez-ibanez # and # dubois-lacoste # and # stuetzle # and # birattari,
-  title = {The {\Rpackage{irace}} package, Iterated Race for
-                  Automatic Algorithm Configuration},
+  title = {The {\Rpackage{irace}} package, Iterated Race for Automatic
+                  Algorithm Configuration},
   institution = iridia,
   year = 2011,
   number = {TR/IRIDIA/2011-004},
