* R/main.R: Avoid generating too many configurations at once if the initial time estimation is too small.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1662 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 2.1
 
- * Fix CRAN errors in tests.
+ * Fix CRAN errors in tests. (Manuel López-Ibáñez)
+ 
+ * Avoid generating too many configurations at once if the initial time
+    estimation is too small. (Manuel López-Ibáñez)
  
 2.0
 
