--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -21,6 +21,8 @@
 @string{cec06 = {Proceedings of the 2006 Congress on Evolutionary
                   Computation (CEC 2006)}}
 
+@string{orp = {Operations Research Perspectives}}
+
 @string{balaprakash = {  Prasanna Balaprakash }}
 
 @string{bartz-beielstein = { Thomas Bartz-Beielstein }}
@@ -40,6 +42,8 @@
 @string{lopez-ibanez = { Manuel L{\'o}pez-Ib{\'a}{\~n}ez }}
 
 @string{paquete = { Lu{\'i}s Paquete }}
+
+@string{perez_l = {Leslie {P{\'e}rez C{\'a}ceres} }}
 
 @string{preuss_m = { Mike Preuss }}
 
@@ -81,6 +85,18 @@
                   experimental results show that the pruning
                   techniques used may reduce the time complexity
                   exponent even further.}
+}
+
+@article{LopDubPerStuBir2016irace,
+  author = lopez-ibanez # and # dubois-lacoste # and # perez_l # and # stuetzle # and # birattari,
+  title = {The {\Rpackage{irace}} package: Iterated Racing for Automatic
+                  Algorithm Configuration},
+  journal = orp,
+  year = 2016,
+  supplement = {http://iridia.ulb.ac.be/supp/IridiaSupp2016-003/},
+  doi = {10.1016/j.orp.2016.09.002},
+  volume = 3,
+  pages = {43--58}
 }
 
 @techreport{LopDubStu2011irace,
