--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1097,8 +1097,8 @@ list. The structure of the \code{experiment} list is as follows:
    \code{seed} & seed to be used for this evaluation;\\
    \code{instance} & string giving the instance to be used for this evaluation;\\
    \code{extra.params} & user-defined parameters associated to the instance;\\
-   \code{configuration}    & 1-row data frame with a column per parameter name.\\
-   \code{switches}         & vector of parameter switches in the order of parameters used in \code{configuration}.\\
+   \code{configuration}    & 1-row data frame with a column per parameter name;\\
+   \code{switches}         & vector of parameter switches (labels) in the order of parameters used in \code{configuration}.\\
 
   \end{tabularx}
 \end{center}
@@ -1109,20 +1109,37 @@ The following is an example of an experiment list for the \ACOTSP scenario:
 print(experiment)
 @
 
-The function \parameter{targetRunner} must return a list with one element
-\code{"cost"}, the numerical value corresponding to the evaluation of the
-candidate configuration on the given instance and, optionally, another element
-\code{"time"}, the execution time (mandatory when
-\parameter{maxTime} is used).
+If \parameter{targetEvaluator} is \code{NULL}, then
+the \parameter{targetRunner} function must return a list with at least one
+element \code{"cost"}, the numerical value corresponding to the evaluation of
+the given configuration on the given instance.
+    
+If the scenario option \parameter{maxTime} is non-zero, then the list must contain
+at least another element \code{"time"} that reports the execution time for this
+call to \code{targetRunner}.
+
+The return list may also contain the following optional elements that are used
+by \irace for reporting errors in \code{targetRunner}:
+%
+\begin{center}
+\renewcommand{\arraystretch}{1.2}
+  \begin{tabularx}{1\linewidth}{@{}rX}
+\code{error} & is a string used to report an error;\\
+    \code{outputRaw} & is a string used to report the raw output of calls to
+      an external program or function;\\
+    \code{call} & is a string used to report how \code{targetRunner} called 
+      an external program or function;\\
+  \end{tabularx}
+\end{center}
 
 
 
 \subsection{Target evaluator} \label{sec:evaluator}
 
-Normally, \parameter{targetRunner}
-returns the cost of the execution of a candidate configuration (see \autoref{sec:runner}). However, there are cases
-when the cost evaluation must be delayed until
-all candidate configurations in a race have been executed on a instance.
+Normally, \parameter{targetRunner} returns the cost of the execution of a
+candidate configuration (see \autoref{sec:runner}). However, there are cases
+when the cost evaluation must be delayed until all candidate configurations in
+a race have been executed on a instance.
 
 The \parameter{targetEvaluator} option defines an auxiliary program (or an \aR
 function) that allows postponing the evaluations of the candidate
@@ -1187,20 +1204,34 @@ When \parameter{targetEvaluator} is an \aR function, it is invoked
 for each candidate configuration as:%
 %
 <<targetEvaluator, prompt=FALSE, eval=FALSE>>=
-targetEvaluator(experiment, num.configs, all.conf.id, scenario,
-                target.runner.call)
+targetEvaluator(experiment, num.configurations, all.conf.id,
+                scenario, target.runner.call)
 @
 %
 \noindent where \code{experiment} is a list that contains information about one
-experiment (See \autoref{sec:runner fx}), \code{num.configs}
-is the number of configurations alive on the race, \code{all.conf.id} is
-the vector of IDs of the alive candidates configurations,  \code{scenario} is
+experiment (see \autoref{sec:runner fx}), \code{num.configurations}
+is the number of configurations alive in the race, \code{all.conf.id} is
+the vector of IDs of the alive configurations,  \code{scenario} is
 the scenario list and \code{target.tunner.call} is the string of the
 \parameter{targetRunner} execution line.
 
 The function \parameter{targetEvaluator} must return a list with one element
 \code{"cost"}, the numerical value corresponding to the cost measure of the
-candidate configuration on the given instance.
+given configuration on the given instance.
+
+The return list may also contain the following optional elements that are used
+by \irace for reporting errors in \code{targetEvaluator}:
+%
+\begin{center}
+\renewcommand{\arraystretch}{1.2}
+  \begin{tabularx}{1\linewidth}{@{}rX}
+\code{error} & is a string used to report an error;\\
+    \code{outputRaw} & is a string used to report the raw output of calls to
+      an external program or function;\\
+    \code{call} & is a string used to report how \code{targetEvaluator} called 
+      an external program or function;\\
+  \end{tabularx}
+\end{center}
 
 \subsection{Training instances}\label{sec:training}
 
