--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -87,6 +87,14 @@
                   exponent even further.}
 }
 
+@techreport{IRIDIA-2004-001,
+  author = birattari,
+  title = {On the Estimation of the Expected Performance of a Metaheuristic on a Class of Instances. How Many Instances, How Many Runs?},
+  institution = iridia,
+  year = 2004,
+  number = {TR/IRIDIA/2004-001}
+}
+
 @article{LopDubPerStuBir2016irace,
   author = lopez-ibanez # and # dubois-lacoste # and # perez_l # and # stuetzle # and # birattari,
   title = {The {\Rpackage{irace}} package: Iterated Racing for Automatic
